2005-05-28  Manish Singh  <yosh@gimp.org>

	* gobject/pygiochannel.c (pyg_iowatch_marshal): Pass the GIOCondition
	to PyObject_CallFunction.

2005-05-28  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/gobjectmodule.c: (initgobject):
	* gobject/pygobject-private.h:
	* gobject/pygtype.c: (pyg_register_boxed_custom):
	Sort quark names. Rename pyg_boxed_marshal_key to pygboxed_marshal_key.
	Don't set the keys twice

2005-05-28  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygpointer.c (pyg_register_pointer): change quark name
	from pointer_type_id to pygpointer_class_key, for consistency;
	assume it to be already registered.

	* gobject/pygenum.c (pyg_enum_add): pygenum_class_id is already
	registered.

	* gobject/pygtype.c (pyg_register_boxed_custom):
	pyg_boxed_marshal_key is already registered.

	* gobject/pygobject.c (pygobject_register_class):
	pygobject_class_key is already registered.
	(pygobject_register_wrapper): pygobject_wrapper_key is already
	registered.
	(pygobject_new_with_interfaces): idem.
	(pygobject_new): pygobject_wrapper_key is already registered.

	* gobject/pygboxed.c (pyg_register_boxed): Don't register
	boxed_type_id, use pygboxed_type_key instead, which is assumed to
	be already registered.

	* gobject/gobjectmodule.c (initgobject): Register all the gquarks.
	(global): Remove the *_id static const strings, they are redundant now.

	* gobject/pygobject-private.h: Declare all the global gquarks.

2005-05-25  Manish Singh  <yosh@gimp.org>

	* gobject/pygiochannel.c: Pass gsize to GIOChannel functions that
	expect them.

2005-05-25  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* examples/gtk/widget.py (PyGtkWidget.do_realize): move_resize()
	window here as well.
	(PyGtkWidget.do_expose_event): Fix rectangle coordinates.
	(frame): Put custom widget in a frame (Christian Kirbach).

2005-05-22  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/test_signal.py: Update tests to deal with automatic
	registration.
