@@ -1,3 +1,8 @@
+2005-05-29  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* gobject/pygobject.c (pygobjectmeta_init): Don't register types
+	that are already registered (have a __gtype__ attribute).
+
 2005-05-28  Manish Singh  <yosh@gimp.org>
 
 	* gobject/pygiochannel.c (pyg_iowatch_marshal): Pass the GIOCondition
